# eussh

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
.github/workflows/: build.yml  release.yml
.opencode/plans/: macos-improvements.md
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  state.rs
src-tauri/src/commands/: config.rs  connection.rs  file.rs  local.rs  mod.rs  open.rs
src-tauri/src/models/: config.rs  connection.rs
src-tauri/src/ssh/: host_key.rs  manager.rs  mod.rs  session.rs
src-tauri/src/storage/: config_store.rs  encrypt.rs  mod.rs
src-tauri/src/terminal/: manager.rs  session.rs
src/assets/css/: main.css
src/components/common/: IconButton.vue  Modal.vue  RoseSpinner.vue  Toast.vue  Toggle.vue
src/components/connection/: ConnectionDialog.vue  HostKeyDialog.vue
src/components/filemanager/: BreadcrumbBar.vue  ContextMenu.vue  FileIconView.vue  FileListView.vue  FileManager.vue
src/components/layout/: ActivityBar.vue  AppShell.vue  DebugPanel.vue  MainTabBar.vue  Sidebar.vue  StatusBar.vue  TitleBar.vue  VersionCheck.vue  (+1 more)
src/composables/: useI18n.js  useKeyboard.js  useLogger.js  useMonitor.js  useServerData.js  useTheme.js  useToast.js  useXterm.js
src/locales/: en.js  zh-CN.js
src/stores/: useConnectionStore.js  useFileManagerStore.js  useServerStore.js  useSettingsStore.js
src/utils/: colors.js  constants.js  ipc.js  theme.js
(+8 files in other folders)
