[package]
name = "eussh"
version = "1.2.0"
description = "An SSH client built with Tauri"
authors = ["Eussh Contributors"]
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }

russh = { version = "0.61", default-features = false, features = ["ring", "rsa", "flate2", "async-trait"] }
async-trait = "0.1"
aes-gcm = "0.10"
ring = "0.17"
base64 = "0.21"
rand = "0.8"
dirs = "5"
arboard = "3"

[features]
custom-protocol = ["tauri/custom-protocol"]
