[package]
name = "eussh"
version = "1.3.5"
description = "An SSH client built with Tauri"
authors = ["Eussh Contributors"]
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }

russh = { version = "0.61", default-features = false, features = ["ring", "rsa", "flate2", "async-trait"] }
aes-gcm = "0.10"
ring = "0.17"
rand_core = "0.6"
base64 = "0.21"
dirs = "5"
arboard = "3"
